--- a/app/plantillas/sg/valida.html
+++ b/app/plantillas/sg/valida.html
@@ -1,10 +1,11 @@
 
 
 <ScrollView>
-   <StackLayout >
+ <StackLayout >
     <ActionBar title="Dirección" class="action-bar"></ActionBar>
     <Image src="~/images/mapa.png" class="cp" horizontalAlignment="center" verticalAlignment="center" ></Image>
     <TextField hint="CP" [(ngModel)]="cp" keyboardType= "Number" verticalAlignment="center" ></TextField >
     <Button text = "Validar" class="boton" (tap)="validar()"></Button>
-   </StackLayout>
+    <label  text= "Iniciar Sesión" class="text" (tap)= "sesion()" horizontalAlignment="center" > </label> 
+ </StackLayout>
 </ScrollView>
