--- a/app/plantillas/sg/persona.html
+++ b/app/plantillas/sg/persona.html
@@ -1,30 +1,29 @@
 <ScrollView>
    <StackLayout>
      
-     <TextField hint="Nombre"           [(ngModel)]="persona.nombre"></TextField>
-     <TextField hint="Apellido Paterno" [(ngModel)]="persona.apaterno" ></TextField>
-     <TextField hint="Apellido Materno" [(ngModel)]="persona.amaterno"></TextField>
+     <TextField hint="Nombre"           [(ngModel)]="persona.cNombre"   ></TextField>
+     <TextField hint="Apellido Paterno" [(ngModel)]="persona.cApaterno" ></TextField>
+     <TextField hint="Apellido Materno" [(ngModel)]="persona.cAmaterno" ></TextField>
 
      <Label text="Genero"  horizontalAlignment="left" > </Label >
 
      <DockLayout rows="auto auto" columns="* *" >
         <Image src="~/images/men.png"   class= "genero" textWrap="true"  row="0" col="0" horizontalAlignment="left" ></Image>  
         <Switch checked="false" (checkedChange)="onFirstChecked($event)" row="0" col="1" horizontalAlignment="right"
-         [(ngModel)]="persona.genero" ></Switch>
+         [(ngModel)]="persona.lGenero" ></Switch>
         <Image src="~/images/girl.png" class= "genero" textWrap="true"   row="0" col="2" horizontalAlignment="left"  ></Image>   
      </DockLayout>
 
      <Label text="Fecha de Nacimiento" horizontalAlignment="left"> </Label>
-    <DatePicker (loaded)="onPickerLoaded($event)" (dateChange)="onDateChanged($event)" 
-(dayChange)="onDayChanged($event)" (monthChange)="onMonthChanged($event)" 
-(yearChange)="onYearChanged($event)" verticalAlignment="center" [(ngModel)]="persona.fechanac"
- ></DatePicker>
+      <DatePicker (loaded)="onPickerLoaded($event)" (dateChange)="onDateChanged($event)"
+       (dayChange)="onDayChanged($event)" (monthChange)="onMonthChanged($event)"
+       (yearChange)="onYearChanged($event)" verticalAlignment="center" [(ngModel)]="persona.dtFechaNac">
+     </DatePicker>
     
-     <TextField hint="Edad"                      [(ngModel)]="persona.edad"></TextField>
-     <TextField hint="Telefono"                  [(ngModel)]="persona.telefono"></TextField>
-     <TextField hint="Correo  *Opcional "        [(ngModel)]="persona.correo"></TextField>
-     <TextField hint="Nombre de usuario"         [(ngModel)]="persona.usuario"></TextField>
-     <TextField hint="Contraseña" secure="true"  [(ngModel)]="persona.contrasena"> </TextField> 
+     <TextField hint="Telefono"                  [(ngModel)]="persona.cTelefono" keyboardType= "phone"></TextField>
+     <TextField hint="Correo  *Opcional "        [(ngModel)]="persona.cCorreo"   keyboardType= "email"></TextField>
+     <TextField hint="Nombre de usuario"         [(ngModel)]="persona.cUsuario"></TextField>
+     <TextField hint="Contraseña" secure="true"  [(ngModel)]="persona.cContrasena"> </TextField> 
      <Button [text]="'Registrar'" class="submit-button" (tap)="submit()"></Button>     
-</StackLayout>
-  </ScrollView>
+  </StackLayout>
+</ScrollView>                          
