Cambio de contraseña

--- a/app/plantillas/sg/contrasena.html
+++ b/app/plantillas/sg/contrasena.html
@@ -1,6 +1,6 @@
 <ScrollView>
    <StackLayout>
-        <Image src="~/images/pass.png" class="pass" horizontalAlignment="center"  ></Image>
+        <Image src="~/images/buscar.png" class="look" horizontalAlignment="center"  ></Image>
         <label  text="Debe ingresar su Usuario y Telefono/Correo " class= "info" horizontalAlignment="center"></label>
         <TextField hint="Usuario" [(ngModel)]="usuario.cUsuario"
         autocorrect="false" autocapitalizationType="none"></TextField >
