--- a/app/plantillas/ope/categorias.html
+++ b/app/plantillas/ope/categorias.html
@@ -1,9 +1,10 @@
 <ScrollView>
     <StackLayout>
         <DockLayout>
-            <Image src="~/images/go.png" col="0" row="0" class="back" (tap)="back()" horizontalAlignment="left"></Image>
+            <Image src="~/images/go.png"   col="0" row="0" class="back" (tap)="back()" horizontalAlignment="left"></Image>
             <SearchBar class="busca" col="0" row="0" colSpan="1" hint="Search" horizontalAlignment="center" text="" clear="onClear" submit="onSubmit">
             </SearchBar>/>
+            <Image src="~/images/menu.png" col="0" row="0" class="back" (tap)="back()" horizontalAlignment="left"></Image>
         </DockLayout>
         <WrapLayout [ngGrid]="{'resizeable': false, 'margins': [20, 50]}">
             <WrapLayout *ngFor="let todo of todoList" rows="auto" columns="auto, *, auto, auto" class="for">
