Cambios en datos

--- a/app/plantillas/ope/menu.html
+++ b/app/plantillas/ope/menu.html
@@ -24,6 +24,6 @@
             <Image src="~/images/novios.png"  class="img" id= "4" (tap)="back()"></Image>
             <Image src="~/images/amigos.png"  class="img" id= "5" (tap)="back()"></Image>
         </WrapLayout>
-        <Button [text]="'Guardar'" class="submit-button" (tap)="guardar()"></Button>
+        <Button text="Guardar" class="submit-button" (tap)="guardar()"></Button>
     </StackLayout>
 </ScrollView>
