--- a/app/plantillas/ope/datos.html
+++ b/app/plantillas/ope/datos.html
@@ -1,13 +1,12 @@
 <ScrollView>
     <StackLayout>
         <StackLayout>
-         <label text="Registro de Datos" class="info" horizontalAlignment="center"></label>
+         <label text="Registro de Datos" class="info1" horizontalAlignment="center"></label>
          </StackLayout>
-       <DockLayout>
-            <Image src="~/images/c.png" col="0" row="0" class="img" (tap)="back()" horizontalAlignment="left"></Image>    
-            <label text="Registrar tarjeta" col="1" row="0"class="inf1" ></label>      
+        <DockLayout>
+            <Image src="~/images/c.png" col="0" row="0" class="back" (tap)="back()" horizontalAlignment="left"></Image>
+            <label text="Registro de Tarjeta" class="info1" horizontalAlignment="center"></label>
         </DockLayout>
-
         <Button text="Guardar" class="submit-button" (tap)="guardar()"></Button>
     </StackLayout>
 </ScrollView>
