--- a/app/plantillas/ope/direccion.html
+++ b/app/plantillas/ope/direccion.html
@@ -18,11 +18,11 @@
 
         <WrapLayout>
             <label text="Dirección de :" class="inf" horizontalAlignment="center"></label>
-            <Image src="~/images/home.png"    class="img" id= "1" (tap)="back()"></Image>
-            <Image src="~/images/oficina.png" class="img" id= "2" (tap)="back()"></Image>
-            <Image src="~/images/abues.png"   class="img" id= "3" (tap)="back()"></Image>
-            <Image src="~/images/novios.png"  class="img" id= "4" (tap)="back()"></Image>
-            <Image src="~/images/amigos.png"  class="img" id= "5" (tap)="back()"></Image>
+            <Image src="~/images/home.png"    class="img" id= "1" (tap)="id1()" [(ngModel)]="domicilio.iAlias"></Image>
+            <Image src="~/images/oficina.png" class="img" id= "2" (tap)="id2()" [(ngModel)]="domicilio.iAlias"></Image>
+            <Image src="~/images/abues.png"   class="img" id= "3" (tap)="id3()" [(ngModel)]="domicilio.iAlias"></Image>
+            <Image src="~/images/novios.png"  class="img" id= "4" (tap)="id4()" [(ngModel)]="domicilio.iAlias"></Image>
+            <Image src="~/images/amigos.png"  class="img" id= "5" (tap)="id5()" [(ngModel)]="domicilio.iAlias"></Image>
         </WrapLayout>
         <Button text="Guardar" class="submit-button" (tap)="guardar()"></Button>
     </StackLayout>
